<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoberApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete_latest">Delete Latest</string>
    <string name="action_view_history">View History</string>
    <string name="title_activity_intro">Welcome to our awesome App!</string>
    <string name="intro_description">Please enter your details to get best results.</string>
    <string name="title_activity_add_drink">Select your Drink</string>
    <string name="button_intro_start">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="default_name">Mrs. X</string>
    <string name="add_drink">Other drinks</string>
    <string name="invalid_name">Please enter a name.</string>
    <string name="invalid_weight">Please enter your weight.</string>
    <string name="invalid_height">Please enter your height.</string>
    <string name="invalid_volume">Please enter a volume.</string>
    <string name="invalid_percentage">Please enter a valid percentage.</string>
    <string name="form_error">Error</string>
    <string name="search_drinks">Start typing to find your drink...</string>
    <string name="form_name">Your Name</string>
    <string name="form_birthday">Your Birthday</string>
    <string name="form_height">Your Height (cm)</string>
    <string name="form_weight">Your Weight (kg)</string>
    <string name="soberTimeDefault">you\'re sober</string>
    <string name="add_last_drink">TODO</string>
    <string name="add_2last_drink">TODO</string>
    <string name="add_3last_drink">TODO</string>
    <string name="create_drink">Create new Drink</string>

    <string-array name="gender_selection">
        <item>Female</item>
        <item>Male</item>
        <item>Robot</item>
    </string-array>

    <string name="title_activity_create_drink">Create new Drink</string>
    <string name="create_drink_hint">Title</string>
    <string name="create_drink_volume_hint">Volume (ml)</string>
    <string name="create_drink_percent">Alcohol (%)</string>
    <string name="create_drink_cancel">Cancel</string>
    <string name="button_create_drink">Create Drink</string>
    <string name="title_activity_change_settings">Settings</string>
    <string name="pick_date">Pick Date</string>
    <string name="text_birthday">Please select your birthday</string>
    <string name="invalid_birthday">Please enter your birthday.</string>
    <string name="title_activity_drinks_history">Drinking History</string>
    <string name="text_view_history">View History</string>
    <string name="add_calendar_entry">Add Calendar Entry</string>

</resources>
