<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="soberapp.vis.ethz.ch.soberapp.IntroActivity">

    <TextView
        android:text="@string/title_activity_intro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/text_intro_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intro_description"
        android:id="@+id/text_description"
        android:gravity="center"
        android:layout_below="@+id/text_intro_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/form_name"
        android:ems="10"
        android:id="@+id/text_name"
        android:layout_below="@+id/text_description"
        android:layout_marginTop="50dip" />

    <TextView
        android:id="@+id/text_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/text_birthday"
        android:layout_below="@+id/text_name"/>

    <Button
        android:id="@+id/date_picker"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/text_name"
        android:textStyle="bold"
        android:background="@drawable/buttonbg"
        android:textColor="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/form_height"
        android:ems="10"
        android:id="@+id/text_height"
        android:layout_below="@+id/date_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/form_weight"
        android:ems="10"
        android:id="@+id/text_weight"
        android:layout_below="@+id/text_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gender_selection"
        android:layout_below="@+id/text_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/button_intro_start"
        android:id="@+id/button_start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickStart"
        android:textStyle="bold"
        android:background="@drawable/buttonbg"
        android:textColor="#ffffff" />

</RelativeLayout>
