<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="soberapp.vis.ethz.ch.soberapp.CreateDrinkActivity">


    <TextView
        android:text="@string/create_drink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/create_drink_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/create_drink_hint"
        android:ems="10"
        android:id="@+id/create_drink_name"
        android:layout_below="@+id/create_drink_title"
        android:layout_marginTop="50dip" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/create_drink_volume_hint"
        android:ems="10"
        android:id="@+id/create_drink_volume"
        android:layout_below="@+id/create_drink_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/create_drink_percent"
        android:ems="10"
        android:id="@+id/create_drink_percentage"
        android:layout_below="@+id/create_drink_volume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/create_drink_cancel"
        android:id="@+id/button_start"
        android:layout_above="@+id/button_create_drink"
        android:layout_centerHorizontal="true"
        android:onClick="onClickCancel"
        android:textStyle="bold"
        android:background="@drawable/buttonbg"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dip"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_create_drink"
        android:id="@+id/button_create_drink"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickCreate"
        android:textStyle="bold"
        android:background="@drawable/buttonbg"
        android:textColor="#ffffff" />
</RelativeLayout>
