<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title_main"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/soberTime"
        android:text="@string/soberTimeDefault"
        android:layout_below="@id/text_title_main"
        android:layout_alignLeft="@+id/text_title_main"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/BAC"
        android:text="0 \u2030"
        android:layout_below="@id/text_title_main"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignRight="@id/text_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BAC"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/add_last_drink"
        android:id="@+id/button_add_last_drink"
        android:layout_below="@+id/BAC"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/space"
        android:onClick="addLastDrink" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/add_2last_drink"
        android:id="@+id/button_add_2last_drink"
        android:layout_below="@+id/BAC"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/space"
        android:onClick="add2LastDrink" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_3last_drink"
        android:id="@+id/button_add_3last_drink"
        android:layout_below="@+id/button_add_last_drink"
        android:layout_alignLeft="@id/button_add_last_drink"
        android:layout_alignRight="@id/button_add_last_drink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:onClick="add3LastDrink" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_drink"
        android:id="@+id/button_add_drink"
        android:layout_below="@+id/button_add_2last_drink"
        android:layout_alignLeft="@id/button_add_2last_drink"
        android:layout_alignRight="@id/button_add_2last_drink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:onClick="addDrink" />

    <ListView
        android:layout_below="@id/button_add_drink"
        android:id="@+id/calendarInstancesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</RelativeLayout>
